Project

General

Profile

Actions

Bug #20921

closed

mon SEGV PerfCounters::tinc() rados/standalone/scrub.yaml shutdown after TEST_scrub_snaps

Added by David Zafman over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
David Zafman
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

In the not yet merged wip-standalone branch I detect cores and display all logs.

http://pulpito.ceph.com/dzafman-2017-08-04_21:23:03-rados-wip-zafman-testing-distro-basic-smithi/1486254

2017-08-05T05:01:44.792 INFO:tasks.workunit.client.0.smithi061.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/scrub/osd-scrub-snaps.sh:466: TEST_scrub_snaps:  teardown td/osd-scrub-snaps
2017-08-05T05:01:44.792 INFO:tasks.workunit.client.0.smithi061.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:154: teardown:  local dir=td/osd-scrub-snaps
2017-08-05T05:01:44.792 INFO:tasks.workunit.client.0.smithi061.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:155: teardown:  local dumplogs=
2017-08-05T05:01:44.793 INFO:tasks.workunit.client.0.smithi061.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:156: teardown:  kill_daemons td/osd-scrub-snaps KILL
2017-08-05T05:01:44.793 INFO:tasks.workunit.client.0.smithi061.stderr://home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:318: kill_daemons:  shopt -q -o xtrace
2017-08-05T05:01:44.793 INFO:tasks.workunit.client.0.smithi061.stderr://home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:318: kill_daemons:  echo true
2017-08-05T05:01:44.795 INFO:tasks.workunit.client.0.smithi061.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:318: kill_daemons:  local trace=true
2017-08-05T05:01:44.796 INFO:tasks.workunit.client.0.smithi061.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:319: kill_daemons:  true
2017-08-05T05:01:44.796 INFO:tasks.workunit.client.0.smithi061.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:319: kill_daemons:  shopt -u -o xtrace
2017-08-05T05:01:44.799 INFO:tasks.workunit.client.0.smithi061.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:335: kill_daemons:  return 0
2017-08-05T05:01:44.799 INFO:tasks.workunit.client.0.smithi061.stderr://home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:157: teardown:  uname
2017-08-05T05:01:44.799 INFO:tasks.workunit.client.0.smithi061.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:157: teardown:  '[' Linux '!=' FreeBSD ']'
2017-08-05T05:01:44.800 INFO:tasks.workunit.client.0.smithi061.stderr://home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:158: teardown:  stat -f -c %T .
2017-08-05T05:01:44.802 INFO:tasks.workunit.client.0.smithi061.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:158: teardown:  '[' ext2/ext3 == btrfs ']'
2017-08-05T05:01:44.802 INFO:tasks.workunit.client.0.smithi061.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:161: teardown:  local cores=no
2017-08-05T05:01:44.802 INFO:tasks.workunit.client.0.smithi061.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:163: teardown:  grep -q '^core\|core$'
2017-08-05T05:01:44.802 INFO:tasks.workunit.client.0.smithi061.stderr:///home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:163: teardown:  sysctl -n kernel.core_pattern
2017-08-05T05:01:44.803 INFO:tasks.workunit.client.0.smithi061.stderr://home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:163: teardown:  dirname /home/ubuntu/cephtest/archive/coredump/%t.%p.core
2017-08-05T05:01:44.804 INFO:tasks.workunit.client.0.smithi061.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:163: teardown:  ls /home/ubuntu/cephtest/archive/coredump
2017-08-05T05:01:44.805 INFO:tasks.workunit.client.0.smithi061.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:164: teardown:  cores=yes
2017-08-05T05:01:44.805 INFO:tasks.workunit.client.0.smithi061.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:165: teardown:  '[' -n '' ']'
2017-08-05T05:01:44.805 INFO:tasks.workunit.client.0.smithi061.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:172: teardown:  '[' yes = yes -o '' = 1 ']'
2017-08-05T05:01:44.805 INFO:tasks.workunit.client.0.smithi061.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/ceph-helpers.sh:173: teardown:  display_logs td/osd-scrub-snaps
2017-08-05T05:02:03.900 INFO:tasks.workunit.client.0.smithi061.stdout:2017-08-05 05:01:41.569343 7f7c78848700 20 queue 0x7f7c9065e540 3 [0,4)
2017-08-05T05:02:03.900 INFO:tasks.workunit.client.0.smithi061.stdout:2017-08-05 05:01:41.569346 7f7c78848700 10 mon.a@0(leader).osd e35 start_mapping started mapping job 0x7f7c9065e540 at 2017-08-05 05:01:41.569328
2017-08-05T05:02:03.900 INFO:tasks.workunit.client.0.smithi061.stdout:2017-08-05 05:01:41.569354 7f7c78848700 20 mon.a@0(leader).paxos(paxos active c 1..148) finish_round waiting_for_readable
2017-08-05T05:02:03.901 INFO:tasks.workunit.client.0.smithi061.stdout:2017-08-05 05:01:41.569359 7f7c78848700 20 mon.a@0(leader).paxos(paxos active c 1..148) finish_round waiting_for_writeable
2017-08-05T05:02:03.901 INFO:tasks.workunit.client.0.smithi061.stdout:2017-08-05 05:01:41.569363 7f7c78848700 10 mon.a@0(leader).paxos(paxos active c 1..148) finish_round done w/ waiters, state active
...
2017-08-05T05:02:03.920 INFO:tasks.workunit.client.0.smithi061.stdout:2017-08-05 05:01:41.635535 7f7c78848700 20 mon.a@0(shutdown).paxos(paxos writing c 1..148) commit_finish 149
2017-08-05T05:02:03.920 INFO:tasks.workunit.client.0.smithi061.stdout:2017-08-05 05:01:41.639721 7f7c78848700 -1 *** Caught signal (Segmentation fault) **
2017-08-05T05:02:03.920 INFO:tasks.workunit.client.0.smithi061.stdout: in thread 7f7c78848700 thread_name:fn_monstore
2017-08-05T05:02:03.920 INFO:tasks.workunit.client.0.smithi061.stdout:
2017-08-05T05:02:03.920 INFO:tasks.workunit.client.0.smithi061.stdout: ceph version 12.1.2-305-gcc7bb58 (cc7bb58c785f6a7def8100b4629a0be7bb8bb990) luminous (rc)
2017-08-05T05:02:03.920 INFO:tasks.workunit.client.0.smithi061.stdout: 1: (()+0x8b8c49) [0x7f7c861eac49]
2017-08-05T05:02:03.921 INFO:tasks.workunit.client.0.smithi061.stdout: 2: (()+0x10330) [0x7f7c84cca330]
2017-08-05T05:02:03.922 INFO:tasks.workunit.client.0.smithi061.stdout: 3: (PerfCounters::tinc(int, utime_t, unsigned int)+0x12) [0x7f7c85ee1742]
2017-08-05T05:02:03.922 INFO:tasks.workunit.client.0.smithi061.stdout: 4: (Paxos::commit_finish()+0x173) [0x7f7c85df0493]
2017-08-05T05:02:03.922 INFO:tasks.workunit.client.0.smithi061.stdout: 5: (C_Committed::finish(int)+0x2b) [0x7f7c85df851b]
2017-08-05T05:02:03.922 INFO:tasks.workunit.client.0.smithi061.stdout: 6: (Context::complete(int)+0x9) [0x7f7c85cf36a9]
2017-08-05T05:02:03.922 INFO:tasks.workunit.client.0.smithi061.stdout: 7: (MonitorDBStore::C_DoTransaction::finish(int)+0x8c) [0x7f7c85df765c]
2017-08-05T05:02:03.922 INFO:tasks.workunit.client.0.smithi061.stdout: 8: (Context::complete(int)+0x9) [0x7f7c85cf36a9]
2017-08-05T05:02:03.922 INFO:tasks.workunit.client.0.smithi061.stdout: 9: (Finisher::finisher_thread_entry()+0x188) [0x7f7c85f016a8]
2017-08-05T05:02:03.923 INFO:tasks.workunit.client.0.smithi061.stdout: 10: (()+0x8184) [0x7f7c84cc2184]
2017-08-05T05:02:03.923 INFO:tasks.workunit.client.0.smithi061.stdout: 11: (clone()+0x6d) [0x7f7c83582ffd]

Related issues 2 (0 open2 closed)

Related to Ceph - Bug #20465: Race seen between pool creation and wait_for_clean(): seen in test-erasure-eio.shResolvedDavid Zafman06/29/2017

Actions
Has duplicate RADOS - Bug #20875: mon segv during shutdownDuplicateDavid Zafman08/02/2017

Actions
Actions #1

Updated by David Zafman over 6 years ago

  • Has duplicate Bug #20875: mon segv during shutdown added
Actions #2

Updated by David Zafman over 6 years ago

  • Status changed from 12 to In Progress
Actions #3

Updated by David Zafman over 6 years ago

  • Related to Bug #20465: Race seen between pool creation and wait_for_clean(): seen in test-erasure-eio.sh added
Actions #4

Updated by David Zafman over 6 years ago

  • Status changed from In Progress to Resolved
Actions

Also available in: Atom PDF