osd: Fix Paxos shutdown handling for commit_finish race

Fixes: http://tracker.ceph.com/issues/20921

Signed-off-by: David Zafman <dzafman@redhat.com>